<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity"
>

    <include layout="@layout/actionbar_app" android:id="@+id/action_barLogin"/>
    <TextView
            android:id="@+id/lblInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginPage"
            android:textSize="25sp"
            android:textColor="@android:color/black"
            android:layout_below="@id/action_barLogin"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
    />
    <EditText
        android:id="@+id/txtMailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblInfo"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"
/>
    <EditText
            android:id="@+id/txtPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtMailLogin"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
    />
    <Button
            android:id="@+id/btnLoginApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/btnSignUp2"
            android:layout_marginBottom="35dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/Login"
            android:textColor="@color/btnSignUp"
    />
</RelativeLayout>