<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignUpActivity"
>

    <include layout="@layout/actionbar_app" android:id="@+id/action_barSignUp"/>
    <TextView
            android:id="@+id/lblInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SignUp"
            android:textSize="25sp"
            android:textColor="@android:color/black"
            android:layout_below="@id/action_barSignUp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
    />
    <EditText
            android:id="@+id/txtUserNameSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblInfo"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/userName"
    />
    <EditText
            android:id="@+id/txtMailSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtUserNameSignUp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/mail"
            android:inputType="textEmailAddress"
    />
    <EditText
            android:id="@+id/txtPasswordSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtMailSignUp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
    />
    <EditText
            android:id="@+id/txtPasswordAgain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtPasswordSignUp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/password_again"
            android:inputType="textPassword"
    />
    <Button
            android:id="@+id/btnCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/btnSignUp2"
            android:layout_marginBottom="35dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/SignUp"
            android:textColor="@color/btnSignUp"
    />

</RelativeLayout>