<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".WelcomeActivity"
        android:background="@color/colorPrimary"
        android:padding="20dp"
>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblAppName"
            android:textSize="35sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:textColor="@android:color/white"
    />
    <Button android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Login"
            android:background="@color/btnLogin"
            android:layout_above="@+id/btnSignUp"
            android:layout_marginBottom="25dp"
    />
    <Button android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SignUp"
            android:background="@color/btnSignUp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="50dp"
    />

</RelativeLayout>